clusters/production/apps/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  selector:
    app: authelia
  ports:
  - port: 80
    targetPort: 9091
    protocol: TCP
