clusters/production/apps/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-local
  namespace: authelia
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.local`)
      kind: Rule
      services:
        - name: authelia
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-external
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.k3s.nu`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: auth-k3s-nu-tls
